--- a/admin-service-dev.properties
+++ b/admin-service-dev.properties
@@ -2,7 +2,7 @@
 management.endpoints.web.exposure.include=*
 
 #DataSource
-spring.datasource.url=jdbc:h2:mem:cafeadmin
+spring.datasource.url=jdbc:h2:mem:admin
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
