--- a/admin-service-prod.properties
+++ b/admin-service-prod.properties
@@ -2,10 +2,10 @@
 management.endpoints.web.exposure.include=*
 
 #DataSource
-spring.datasource.url=jdbc:mysql://localhost:3306/cafeadmin?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/admin?createDatabaseIfNotExist=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=Sankar@12345
+spring.datasource.password=Aadya@123
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 
